snapshots/DeepSpeech/native_client/test__tflitemodelstate.h.snap
---
source: tests/test.rs
expression: funcspace_struct
---
FuncSpace {
    name: None,
    start_line: 1,
    end_line: 60,
    kind: Unit,
    spaces: [
        FuncSpace {
            name: Some(
                "TFLiteModelState",
            ),
            start_line: 13,
            end_line: 58,
            kind: Struct,
            spaces: [],
            metrics: CodeMetrics {
                nargs: Stats {
                    fn_nargs: 0,
                    closure_nargs: 0,
                    fn_nargs_sum: 0,
                    closure_nargs_sum: 0,
                    fn_nargs_min: 0,
                    closure_nargs_min: 0,
                    fn_nargs_max: 0,
                    closure_nargs_max: 0,
                    total_functions: 0,
                    total_closures: 0,
                },
                nexits: Stats {
                    exit: 0,
                    exit_sum: 0,
                    total_space_functions: 0,
                    exit_min: 0,
                    exit_max: 0,
                },
                cognitive: Stats {
                    structural: 0,
                    structural_sum: 0,
                    structural_min: 0,
                    structural_max: 0,
                    nesting: 0,
                    total_space_functions: 0,
                    boolean_seq: BoolSequence {
                        boolean_op: None,
                    },
                },
                cyclomatic: Stats {
                    cyclomatic_sum: 1.000,
                    cyclomatic: 1.000,
                    n: 1,
                    cyclomatic_max: 1.000,
                    cyclomatic_min: 1.000,
                },
                halstead: Stats {
                    u_operators: 12,
                    operators: 155,
                    u_operands: 43,
                    operands: 64,
                },
                loc: Stats {
                    sloc: Sloc {
                        start: 12,
                        end: 57,
                        unit: fal,
                        sloc_min: 46,
                        sloc_max: 46,
                    },
                    ploc: Ploc {
                        lines: {
                            55,
                            52,
                            49,
                            46,
                            43,
                            40,
                            31,
                            28,
                            25,
                            22,
                            19,
                            13,
                            56,
                            53,
                            50,
                            47,
                            44,
                            41,
                            38,
                            35,
                            23,
                            20,
                            17,
                            14,
                            57,
                            54,
                            51,
                            48,
                            42,
                            39,
                            36,
                            33,
                            30,
                            27,
                            24,
                            18,
                            15,
                            12,
                        },
                        ploc_min: 38,
                        ploc_max: 38,
                    },
                    cloc: Cloc {
                        only_comment_lines: 0,
                        code_comment_lines: 0,
                        comment_line_end: None,
                        cloc_min: 0,
                        cloc_max: 0,
                    },
                    lloc: Lloc {
                        logical_lines: 2,
                        lloc_min: 2,
                        lloc_max: 2,
                    },
                    space_count: 1,
                    blank_min: 8,
                    blank_max: 8,
                },
                nom: Stats {
                    functions: 0,
                    closures: 0,
                    functions_sum: 0,
                    closures_sum: 0,
                    functions_min: 0,
                    functions_max: 0,
                    closures_min: 0,
                    closures_max: 0,
                    space_count: 1,
                },
                mi: Stats {
                    halstead_length: 219.000,
                    halstead_vocabulary: 55.000,
                    halstead_volume: 1266.118,
                    cyclomatic: 1.000,
                    sloc: 46.000,
                    comments_percentage: 0.000,
                },
                abc: Stats {
                    assignments: 0.000,
                    assignments_sum: 0.000,
                    assignments_min: 0.000,
                    assignments_max: 0.000,
                    branches: 0.000,
                    branches_sum: 0.000,
                    branches_min: 0.000,
                    branches_max: 0.000,
                    conditions: 0.000,
                    conditions_sum: 0.000,
                    conditions_min: 0.000,
                    conditions_max: 0.000,
                    space_count: 1,
                    declaration: [],
                },
                wmc: Stats {
                    cyclomatic: 0.000,
                    class_wmc: 0.000,
                    interface_wmc: 0.000,
                    class_wmc_sum: 0.000,
                    interface_wmc_sum: 0.000,
                    space_kind: Unknown,
                },
                npm: Stats {
                    class_npm: 0,
                    interface_npm: 0,
                    class_nm: 0,
                    interface_nm: 0,
                    class_npm_sum: 0,
                    interface_npm_sum: 0,
                    class_nm_sum: 0,
                    interface_nm_sum: 0,
                    is_class_space: fal,
                },
                npa: Stats {
                    class_npa: 0,
                    interface_npa: 0,
                    class_na: 0,
                    interface_na: 0,
                    class_npa_sum: 0,
                    interface_npa_sum: 0,
                    class_na_sum: 0,
                    interface_na_sum: 0,
                    is_class_space: fal,
                },
            },
        },
    ],
    metrics: CodeMetrics {
        nargs: Stats {
            fn_nargs: 0,
            closure_nargs: 0,
            fn_nargs_sum: 0,
            closure_nargs_sum: 0,
            fn_nargs_min: 0,
            closure_nargs_min: 0,
            fn_nargs_max: 0,
            closure_nargs_max: 0,
            total_functions: 0,
            total_closures: 0,
        },
        nexits: Stats {
            exit: 0,
            exit_sum: 0,
            total_space_functions: 0,
            exit_min: 0,
            exit_max: 0,
        },
        cognitive: Stats {
            structural: 0,
            structural_sum: 0,
            structural_min: 0,
            structural_max: 0,
            nesting: 0,
            total_space_functions: 0,
            boolean_seq: BoolSequence {
                boolean_op: None,
            },
        },
        cyclomatic: Stats {
            cyclomatic_sum: 2.000,
            cyclomatic: 1.000,
            n: 2,
            cyclomatic_max: 1.000,
            cyclomatic_min: 1.000,
        },
        halstead: Stats {
            u_operators: 12,
            operators: 156,
            u_operands: 48,
            operands: 70,
        },
        loc: Stats {
            sloc: Sloc {
                start: 0,
                end: 60,
                unit: tru,
                sloc_min: 46,
                sloc_max: 46,
            },
            ploc: Ploc {
                lines: {
                    0,
                    55,
                    52,
                    49,
                    46,
                    43,
                    40,
                    31,
                    28,
                    25,
                    22,
                    19,
                    13,
                    10,
                    7,
                    4,
                    1,
                    59,
                    56,
                    53,
                    50,
                    47,
                    44,
                    41,
                    38,
                    35,
                    23,
                    20,
                    17,
                    14,
                    8,
                    57,
                    54,
                    51,
                    48,
                    42,
                    39,
                    36,
                    33,
                    30,
                    27,
                    24,
                    18,
                    15,
                    12,
                    6,
                    3,
                },
                ploc_min: 38,
                ploc_max: 38,
            },
            cloc: Cloc {
                only_comment_lines: 0,
                code_comment_lines: 1,
                comment_line_end: None,
                cloc_min: 0,
                cloc_max: 0,
            },
            lloc: Lloc {
                logical_lines: 2,
                lloc_min: 2,
                lloc_max: 2,
            },
            space_count: 2,
            blank_min: 8,
            blank_max: 8,
        },
        nom: Stats {
            functions: 0,
            closures: 0,
            functions_sum: 0,
            closures_sum: 0,
            functions_min: 0,
            functions_max: 0,
            closures_min: 0,
            closures_max: 0,
            space_count: 2,
        },
        mi: Stats {
            halstead_length: 226.000,
            halstead_vocabulary: 60.000,
            halstead_volume: 1334.957,
            cyclomatic: 2.000,
            sloc: 60.000,
            comments_percentage: 0.017,
        },
        abc: Stats {
            assignments: 0.000,
            assignments_sum: 0.000,
            assignments_min: 0.000,
            assignments_max: 0.000,
            branches: 0.000,
            branches_sum: 0.000,
            branches_min: 0.000,
            branches_max: 0.000,
            conditions: 0.000,
            conditions_sum: 0.000,
            conditions_min: 0.000,
            conditions_max: 0.000,
            space_count: 2,
            declaration: [],
        },
        wmc: Stats {
            cyclomatic: 0.000,
            class_wmc: 0.000,
            interface_wmc: 0.000,
            class_wmc_sum: 0.000,
            interface_wmc_sum: 0.000,
            space_kind: Unknown,
        },
        npm: Stats {
            class_npm: 0,
            interface_npm: 0,
            class_nm: 0,
            interface_nm: 0,
            class_npm_sum: 0,
            interface_npm_sum: 0,
            class_nm_sum: 0,
            interface_nm_sum: 0,
            is_class_space: fal,
        },
        npa: Stats {
            class_npa: 0,
            interface_npa: 0,
            class_na: 0,
            interface_na: 0,
            class_npa_sum: 0,
            interface_npa_sum: 0,
            class_na_sum: 0,
            interface_na_sum: 0,
            is_class_space: fal,
        },
    },
}
